[project]
name = "summarizefromlinks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.14.2",
    "google-genai>=1.0.0",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "youtube-transcript-api>=0.6.3",
]
